admissions and mobile viewo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul role="menubar" class="u-nav u-spacing-30 u-unstyled u-nav-1"><li role="none" class="u-nav-item"><a role="menuitem" class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="index.html" style="padding: 10px 0px;">Home</a>
-</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Faculty.html" style="padding: 10px 0px;">Faculty</a>
 </li><li role="none" class="u-nav-item"><a tabindex="-1" role="menuitem" class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="index.html#sec-460b" data-page-id="44014299" style="padding: 10px 0px;">Contact</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Admission.html" style="padding: 10px 0px;">Admission</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="About-Us.html" style="padding: 10px 0px;">About Us</a>
@@ -41,7 +40,6 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close u-menu-close-1" tabindex="-1" aria-label="Close menu"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2" role="menubar"><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="index.html">Home</a>
-</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="Faculty.html">Faculty</a>
 </li><li role="none" class="u-nav-item"><a tabindex="-1" role="menuitem" class="u-button-style u-nav-link" href="index.html#sec-460b" data-page-id="44014299">Contact</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="Admission.html">Admission</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="About-Us.html">About Us</a>
@@ -93,56 +91,56 @@ borders: top right bottom left !important
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
                 <img class="u-expanded-width u-image u-image-default u-image-1" alt="" data-image-width="341" data-image-height="405" src="images/2025-07-0222_02_39-Instagram-Opera.png">
                 <h4 class="u-align-center u-text u-text-3">Vocals</h4>
-                <p class="u-align-justify u-text u-text-4">Discover the power of your voice through our vocal training programs. From beginners to advanced singers, our personalized lessons help you develop technique, expand range, and express yourself with confidence.</p>
+                <p class="u-align-justify u-text u-text-4">Explore our range of vocal classes available for all skill levels. Whether you're a beginner or advanced singer, we offer personalized lessons to help you improve your vocal abilities.</p>
               </div>
             </div>
             <div class="u-container-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-2">
                 <img class="u-expanded-width u-image u-image-default u-image-2" alt="" data-image-width="312" data-image-height="317" src="images/2025-07-0222_03_34-Instagram-Opera.png">
                 <h4 class="u-align-center u-text u-text-5">Violin</h4>
-                <p class="u-align-justify u-text u-text-6">Master the elegance of the violin with courses designed for all levels. Whether starting fresh or refining advanced skills, our classes guide you through technique, artistry, and performance.</p>
+                <p class="u-align-justify u-text u-text-6">Whether you're a beginner or looking to refine your skills, our violin classes cater to all levels. Immerse yourself in the beautiful world of music and enhance your talent.</p>
               </div>
             </div>
             <div class="u-container-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-3">
                 <img class="u-expanded-width u-image u-image-default u-image-3" alt="" data-image-width="486" data-image-height="583" src="images/2025-07-0222_04_30-Instagram-Opera.png">
                 <h4 class="u-align-center u-text u-text-7">Piano </h4>
-                <p class="u-align-justify u-text u-text-8">Experience the joy of piano with expert instruction tailored to your pace. From classical foundations to contemporary styles, our lessons inspire creativity and musical growth.</p>
+                <p class="u-align-justify u-text u-text-8">Experience top-quality piano instruction in a supportive and inspiring learning environment. Enroll now!</p>
               </div>
             </div>
             <div class="u-container-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-4">
                 <img class="u-expanded-width u-image u-image-default u-image-4" alt="" data-image-width="496" data-image-height="610" src="images/2025-07-0218_02_16-Instagram-Opera.png">
                 <h4 class="u-align-center u-text u-text-9">Drums</h4>
-                <p class="u-align-justify u-text u-text-10">Unleash your rhythm with dynamic drum lessons. Explore contemporary styles like rock and pop while building solid technique, timing, and stage presence.</p>
+                <p class="u-align-justify u-text u-text-10">Contemporary (rock and pop)</p>
               </div>
             </div>
             <div class="u-container-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-5">
                 <img class="u-expanded-width u-image u-image-default u-image-5" alt="" data-image-width="1280" data-image-height="720" src="images/7ea598074f27fc2e6cad62331bd69df260e1e33b266a4fefcc7a9f8f6221c5abdd8a4035abd8a39aac75ee21eb8e6151ca7e462101977f760c24f3_1280.jpg">
                 <h4 class="u-align-center u-text u-text-11">Guitar</h4>
-                <p class="u-align-justify u-text u-text-12">Learn guitar across genres—whether classical or contemporary rock and pop. Our courses balance technique, theory, and performance to help you play with skill and style.</p>
+                <p class="u-align-justify u-text u-text-12">Western Classical and Contemporary (rock and pop)</p>
               </div>
             </div>
             <div class="u-container-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-6">
                 <img class="u-expanded-width u-image u-image-default u-image-6" alt="" data-image-width="1280" data-image-height="853" src="images/59d8b900bec3ba622b78c395e295d456f5df8b6a99c9519f8452f731362821eba3dbcc430458933d9a495daa64727a7b3f92f73520b476bc7bc0ba_1280.jpg">
                 <h4 class="u-align-center u-text u-text-13">Choral Conducting</h4>
-                <p class="u-align-justify u-text u-text-14">Develop the art of leading ensembles with our choral conducting program. Gain hands-on experience in score study, rehearsal techniques, and expressive leadership.</p>
+                <p class="u-align-justify u-text u-text-14">lorem ipsum bla bla</p>
               </div>
             </div>
             <div class="u-container-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-7">
                 <img class="u-expanded-width u-image u-image-default u-image-7" alt="" data-image-width="1280" data-image-height="853" src="images/5314635fe0ab44c1c955ea27afaad547b9da6f7d95106c72fbb3288a8cf7d4a8dc2ebfd616b9664546ef1f5673056e1a9a3be5751c837642ecdfeb_1280.jpg">
                 <h4 class="u-align-center u-text u-text-15">Music Theory</h4>
-                <p class="u-align-justify u-text u-text-16">Build a strong foundation in music with comprehensive theory lessons. Understand harmony, rhythm, notation, and analysis to enhance both performance and composition.</p>
+                <p class="u-align-justify u-text u-text-16">loren lorem i[psm bla jha </p>
               </div>
             </div>
             <div class="u-container-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-8">
                 <img class="u-expanded-width u-image u-image-default u-image-8" alt="" data-image-width="1280" data-image-height="854" src="images/9f6bd094ad5e2dd91848172ca8e415df737483bee38759af97c92bba8d100b13cb7f92c138d33f2b8f7d7f9f28bba90b072779bfbf7e53e649e71d_1280.jpg">
                 <h4 class="u-align-center u-text u-text-17">Church Music</h4>
-                <p class="u-align-justify u-text u-text-18">Explore the rich tradition of sacred music through our church music program. Learn hymnody, liturgical repertoire, and the skills needed for worship leadership.</p>
+                <p class="u-align-justify u-text u-text-18">explanation&nbsp;explanation&nbsp;explanation&nbsp;explanation&nbsp;</p>
               </div>
             </div>
           </div>
@@ -208,7 +206,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                     </div>
                   </div>
                   <h3 class="u-text u-text-default u-text-3">Contact Us</h3>
-                  <p class="u-text u-text-4">Ph. no: +91 9494 9494 94<br>Office Timing: 11:00 am to 6:00 pm
+                  <p class="u-text u-text-4">Ph. no: <span style="font-weight: 700;">+</span><span style="font-weight: 700;">91&nbsp;87989 59169;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;+91&nbsp;88374 27242</span>
+                    <br>Office Timing: 11:00 am to 6:00 pm
                   </p>
                   <a href="#" class="u-active-none u-border-2 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-1">kinimischoolofmusic@gmail.com</a>
                 </div>
