Removed fee structure
Added domain name

--- a/Admission.html
+++ b/Admission.html
@@ -111,9 +111,7 @@ borders: top right bottom left !important
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
                       <h2 class="u-text u-text-2">Vocals</h2>
-                      <p class="u-text u-text-3"><span style="font-weight: 700;">Western Classical &amp; Contemporary (rock &amp; pop)<br></span>Books:&nbsp;Marchesi Vocal Method,&nbsp;Concone: The School of Sight-Singing<br>
-                        <br>Exam Board: Trinity College London (TCL)
-                      </p>
+                      <p class="u-text u-text-3"><span style="font-weight: 700;">Western Classical &amp; Contemporary (rock &amp; pop)<br></span></p>
                     </div>
                   </div>
                 </div>
@@ -126,9 +124,7 @@ borders: top right bottom left !important
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
                       <h2 class="u-text u-text-4">Violin</h2>
-                      <p class="u-text u-text-5"><span style="font-weight: 700;"> Western Classical<br></span>Books:&nbsp;Eta Cohen Violin Method, Suzuki Violin School<br>
-                        <br>Exam Board: Trinity College London (TCL)<br>
-                      </p>
+                      <p class="u-text u-text-5"><span style="font-weight: 700;"> Western Classical<br></span></p>
                     </div>
                   </div>
                 </div>
@@ -151,10 +147,7 @@ borders: top right bottom left !important
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-container-layout-2">
                       <h2 class="u-text u-text-1">Piano</h2>
-                      <p class="u-text u-text-2"><span style="font-weight: 700;">Western Classical</span>
-                        <br>Books: John Thomson, Michael Aaron<br>
-                        <br>Exam Board: Trinity College London (TCL)
-                      </p>
+                      <p class="u-text u-text-2"><span style="font-weight: 700;">Western Classical</span></p>
                     </div>
                   </div>
                 </div>
@@ -167,9 +160,7 @@ borders: top right bottom left !important
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
                       <h2 class="u-text u-text-3">Drums</h2>
-                      <p class="u-text u-text-4"><span style="font-weight: 700;">Contemporary (rock &amp; pop)<br></span>Books:&nbsp;​Alfred's Drum Method<br>
-                        <br>Exam Board: Trinity College London (TCL)<br>
-                      </p>
+                      <p class="u-text u-text-4"><span style="font-weight: 700;">Contemporary (rock &amp; pop)<br></span></p>
                     </div>
                   </div>
                 </div>
@@ -192,10 +183,7 @@ borders: top right bottom left !important
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
                       <h2 class="u-text u-text-1">Guitar</h2>
-                      <p class="u-text u-text-2"><span style="font-weight: 700;">Western Classical &amp; Contemporary (rock &amp; pop)</span>
-                        <br>Books:&nbsp;Christopher Parkening (classical guitar),&nbsp;Hal Leonard<br>
-                        <br>Exam Board: Trinity College London (TCL)
-                      </p>
+                      <p class="u-text u-text-2"><span style="font-weight: 700;">Western Classical &amp; Contemporary (rock &amp; pop)</span></p>
                     </div>
                   </div>
                 </div>
@@ -208,10 +196,6 @@ borders: top right bottom left !important
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
                       <h2 class="u-text u-text-3">Choral Conducting</h2>
-                      <p class="u-text u-text-4"><span style="font-weight: 700;">
-                          <br></span>Books:&nbsp;​​The Modern Conductor (Elizabeth Green)<br>
-                        <br>Exam Board: Trinity College London (TCL)<br>
-                      </p>
                     </div>
                   </div>
                 </div>
@@ -234,10 +218,6 @@ borders: top right bottom left !important
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
                       <h2 class="u-text u-text-1">Music Theory</h2>
-                      <p class="u-text u-text-2">
-                        <br>Books:&nbsp;​Trinity Theory of Music Workbooks<br>
-                        <br>Exam Board: Trinity College London (TCL)
-                      </p>
                     </div>
                   </div>
                 </div>
@@ -250,7 +230,6 @@ borders: top right bottom left !important
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
                       <h2 class="u-text u-text-3">Church Music</h2>
-                      <p class="u-text u-text-4">Hymnals, Essentials in Church Music, The Church Musician (David Carr Glover series) </p>
                     </div>
                   </div>
                 </div>
@@ -276,139 +255,7 @@ borders: top right bottom left !important
         </ol>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-7" id="block-5">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-sheet-1">
-        <h5 class="u-align-center u-text u-text-default u-text-1">Kinimi school of music</h5>
-        <h2 class="u-align-center u-text u-text-2">Fee Structure</h2>
-        <div class="u-align-center u-table u-table-responsive u-table-1">
-          <table class="u-table-entity">
-            <colgroup>
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-            </colgroup>
-            <tbody class="u-table-body">
-              <tr style="height: 25px;">
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-1"> Individual Classes</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-2">Grade 1-2</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-3">Grade 3-5</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-4">Grade 6-8</td>
-              </tr>
-              <tr style="height: 47px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell">Vocals</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹4000</td>
-              </tr>
-              <tr style="height: 47px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Violin</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500 </td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹4000</td>
-              </tr>
-              <tr style="height: 47px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Piano</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹4000</td>
-              </tr>
-              <tr style="height: 47px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Drums</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹4000</td>
-              </tr>
-              <tr style="height: 47px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Guitar</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹4000</td>
-              </tr>
-              <tr style="height: 47px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Music Theory</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹4000</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="u-container-style u-expanded-width-xs u-group u-group-1">
-          <div class="u-container-layout u-container-layout-1">
-            <p class="u-align-left u-text u-text-3"> ₹3000 per month</p>
-            <p class="u-align-left u-text u-text-4"> ₹3000 per month</p>
-            <p class="u-align-left u-text u-text-5">Crash Courses</p>
-            <p class="u-align-left u-text u-text-6">Online Courses</p>
-          </div>
-        </div>
-        <div class="u-align-center u-expanded-width-xs u-table u-table-responsive u-table-2">
-          <table class="u-table-entity">
-            <colgroup>
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-            </colgroup>
-            <tbody class="u-table-body">
-              <tr style="height: 76px;">
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-29"> Group Classes</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-30">Grade 1-2</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-31">Grade 3-5</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-32">Grade 6-8</td>
-              </tr>
-              <tr style="height: 50px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell">Vocals</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3500</td>
-              </tr>
-              <tr style="height: 50px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Violin</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3500</td>
-              </tr>
-              <tr style="height: 50px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Piano</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3500</td>
-              </tr>
-              <tr style="height: 50px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Drums</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3500</td>
-              </tr>
-              <tr style="height: 50px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Guitar</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3500</td>
-              </tr>
-              <tr style="height: 76px;">
-                <td class="u-border-1 u-border-grey-dark-1 u-table-cell"> Music Theory</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2000</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹2500</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell"> ₹3500</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="u-container-style u-expanded-width-xs u-group u-group-2">
-          <div class="u-container-layout u-container-layout-2">
-            <p class="u-align-left u-text u-text-7"> ₹3000 per month<br>(Individual)
-            </p>
-            <p class="u-align-left u-text u-text-8">Church Music (6months - 1 year)</p>
-            <p class="u-align-left u-text u-text-9"> ₹2000 per month<br>(Group)
-            </p>
-            <p class="u-align-left u-text u-text-10">Admission Fee</p>
-            <p class="u-align-left u-text u-text-11"> ₹3500 per year</p>
-          </div>
-        </div>
-      </div>
-    </section>
+    
 
 
 
